--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,22 +1,29 @@
 {
-  "compileOnSave": false,
   "compilerOptions": {
     "baseUrl": "./",
     "outDir": "./dist/out-tsc",
+    "target": "es2018",
+    "lib": ["es2018",
+      "es6",
+      "dom"],
+    "module": "commonjs",
+    "resolveJsonModule": true,
     "sourceMap": true,
     "declaration": false,
-    "module": "es2015",
     "moduleResolution": "node",
-    "emitDecoratorMetadata": true,
-    "experimentalDecorators": true,
     "importHelpers": true,
-    "target": "es5",
     "typeRoots": [
       "node_modules/@types"
     ],
-    "lib": [
-      "es2018",
-      "dom"
-    ]
+    "esModuleInterop": true,
+
+    "strict": false,
+    "strictPropertyInitialization": false,
+
+    "noUnusedLocals": false,
+    "noUnusedParameters": false,
+
+    "experimentalDecorators": true,
+    "emitDecoratorMetadata": true
   }
 }
