--- a/package.json
+++ b/package.json
@@ -48,10 +48,10 @@
     "protractor": "~5.4.0",
     "tar": ">=4.4.2",
     "ts-node": "~7.0.0",
-    "tslint": "~5.11.0"
+    "tslint": "~5.11.0",
+    "typescript": "~3.2.2"
   },
   "engines": {
-    "node": "6.11.0",
-    "npm": "3.10.10"
+    "node": "10"
   }
 }
